--- a/.travis.yml
+++ b/.travis.yml
@@ -101,7 +101,7 @@ before_script:
   - php codecept build -c frameworks-yii-basic/tests
   - '[[ "$TRAVIS_PHP_VERSION" == "hhvm" ]] || [[ "$TRAVIS_PHP_VERSION" == "7" ]] || php codecept build -c frameworks-phalcon'
   - php codecept build -c frameworks-laravel
-  - php codecept build -c frameworks-symfony
+#  - php codecept build -c frameworks-symfony
   - '[[ "$TRAVIS_PHP_VERSION" == "5.4" ]] || php codecept build -c frameworks-l5'
   - php codecept build -c frameworks-zf1
   - php codecept build -c frameworks-zf2
